--- a/src/pages/testimonals/testimonals.css
+++ b/src/pages/testimonals/testimonals.css
@@ -2,6 +2,7 @@
   width: 100%;
   min-height: 60vh;
   padding: 0 10%;
+  margin-bottom: 60px;
 }
 .testimonls .item-header {
   text-align: center;
